# Robot-Web-Server

./: Cargo.toml  README.md  api.http  config.yaml  data.sql  diesel.toml
migrations/2025-04-20-121047_create_posts/: up.sql
migrations/2025-04-20-124553_robot_manager/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  robot_controller.rs  schema.rs  state.rs  tcp_server.rs
src/controller/: mod.rs  robot_controller.rs
src/handlers/: mod.rs  robot.rs  root.rs  user.rs
src/models/: config.rs  mod.rs  post.rs  robot.rs
src/services/: db.rs  mod.rs  tcp_server.rs
src/state/: app_state.rs
