[package]
name = "Robot_Web_Server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bb8 = "0.8"
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "r2d2",
] }
dotenvy = "0.15"
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
listenfd = "0.3"
chrono = { version = "0.4", features = ["serde"] }